--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -67,7 +67,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;        
+  justify-content: flex-start;   
+  @media only screen and (max-width:1120px){
+    overflow-x: hidden;
+  }     
   .filterBar{
     position: relative;
     width: 100%;
