--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -187,6 +187,8 @@
       height: 42px;
       @media only screen and (max-width:1120px){
         bottom: -0.8px;
+        width: 30px;
+        height: 30px;
       }
       img{
         width: 100%;
