progress bar test

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -203,9 +203,8 @@
     justify-content: space-between;
     flex-wrap: wrap;
     max-height: 90vh;
-    overflow-y: scroll;
-    @media only screen and (max-width:1120px){
-      overflow-y: none;
+    @media only screen and (min-width:1120px){
+      overflow-y: scroll;
     }
     
     @media only screen and (max-width:1620px){
