--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -66,12 +66,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;   
-  @media only screen and (max-width:1120px){
-    overflow-x: hidden;
-  }     
+  justify-content: flex-start;       
   .filterBar{
-    position: relative;
+    // position: relative;
     width: 100%;
     height: 90px;
     display: flex;
@@ -80,11 +77,9 @@
     padding: 18px 45px;
     background-color: #0F0F0F;
     box-shadow: 0 0 20px #D9D9D9;
-    @media only screen and (max-width:1120px){
-      position: sticky;
-      top: 0px;
-      z-index: 99;
-    }
+    position: sticky;
+    top: 0;
+    z-index: 998;
     
     @media only screen and (max-width:580px){
       padding: 15px 30px;
