--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -4,6 +4,14 @@
     @media only screen and (min-width:1120px){
       overflow: hidden;
     }
+    .overlay{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      min-height: 100%;
+      z-index: 998;
+    }
 }
 .wrapper{
   position: relative;
@@ -118,7 +126,9 @@
       border: 1px solid #F3AD26;
       color: #fff;
       overflow: hidden;  
-      margin-top: 5px;        
+      margin-top: 5px; 
+      cursor: pointer;   
+      caret-color: transparent;    
       @media only screen and (max-width: 1360px){
         width: 180px;
       }
