--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -202,9 +202,7 @@
   }
   }
   .cards{
-    padding-top: 40px;
-    padding-bottom: 40px;
-    padding: 40px 20px;
+    padding: 40px 10px !important;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, max-content));
