--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -97,7 +97,7 @@
     input[type='text']{
       position: relative;
       z-index: 2;
-        width: 485px;
+        width: 70%;
         height: 49px;
         border: 7px solid #5B5947;
         font-weight: 400;
@@ -105,8 +105,8 @@
         color: #6A6A6A;
         background: transparent;
         padding: 10px;
-        @media only screen and (max-width:1720px){
-          width: 50%;
+        @media only screen and (max-width:1580px){
+          width: 60%;
         }
         @media only screen and (max-width:580px){
           border: 3px solid #5B5947;
@@ -124,9 +124,8 @@
       border-radius: 27px;
       background-color: #0F0F0F;
       border: 1px solid #F3AD26;
-      color: #fff;
-      overflow: hidden;  
-      margin-top: 5px; 
+      color: #fff; 
+      margin-top: 2px; 
       cursor: pointer;   
       caret-color: transparent;    
       @media only screen and (max-width: 1360px){
@@ -141,6 +140,15 @@
         list-style: none;
         text-align: center;
         padding: 10px 0;
+        max-height: 60vh;
+        overflow-y: scroll;     
+        &::-webkit-scrollbar
+        {
+          width: 0px;
+        }
+        @media only screen and (max-width:1160px){
+          max-height: 30vh;
+        }
         .option{
           padding: 5px;
           &:hover{
@@ -161,6 +169,9 @@
           font-size: 15px;
           color: #F3AD26;
           text-transform: uppercase;
+          position: sticky;
+          top: 0;
+          z-index: 999;
           @media only screen and (max-width: 1360px){
             width: 180px;
             height: 39px;
@@ -176,6 +187,7 @@
     .hideOptions{
       height: 49px;
       border: none;
+      overflow-y: hidden;
       @media only screen and (max-width: 1360px){
         height: 39px;
       }
