--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -164,7 +164,7 @@
           border-radius: 45px;
           display: flex;
           align-items: center;
-          justify-content: center;
+          justify-content: space-between;
           font-weight: 400;
           font-size: 15px;
           color: #F3AD26;
@@ -172,6 +172,7 @@
           position: sticky;
           top: 0;
           z-index: 999;
+          padding: 4px;
           @media only screen and (max-width: 1360px){
             width: 180px;
             height: 39px;
@@ -180,6 +181,26 @@
             width: 130px;
             height: 30px;
             font-size: 12px;
+          }
+          .addBtn, .minusBtn{
+            width: 25px;
+            height: 25px;
+            color: #000;
+            font-size: 20px;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            background: #F3AD26;
+            transition: all .2s;
+            &:active{
+              cursor: pointer;
+              transform: scale(.95);
+            }
+            span::selection{
+              background: transparent;
+            }
           }
       }
 
