--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -94,28 +94,65 @@
       padding: 15px 30px;
     }
 
-    input[type='text']{
+    .searchInput{
       position: relative;
-      z-index: 2;
-        width: 70%;
-        height: 49px;
-        border: 7px solid #5B5947;
-        font-weight: 400;
-        font-size: 15px;
-        color: #6A6A6A;
+      width: 65%;
+      display: flex;
+      align-items: center;
+      @media only screen and (max-width:1580px){
+        width: 60%;
+      }
+      @media only screen and (max-width:580px){
+        width: 50%;
+      }
+      input[type='text']{
+        position: relative;
+        z-index: 2;
+          width: 100%;
+          height: 49px;
+          border: 7px solid #5B5947;
+          font-weight: 400;
+          font-size: 15px;
+          color: #6A6A6A;
+          background: transparent;
+          padding: 10px;
+          padding-right: 50px;
+
+          @media only screen and (max-width:580px){
+            border: 3px solid #5B5947;
+            height: 30px;
+            margin-right: 10px;
+            margin-top: 10px;
+            font-size: 12px;
+          }
+      }
+      .searchButton{
+        border: none;
+        outline: none;
+        position: absolute;
+        right: 10px;
         background: transparent;
-        padding: 10px;
-        @media only screen and (max-width:1580px){
-          width: 60%;
-        }
+        z-index: 999;
+        transition: all .2s;
         @media only screen and (max-width:580px){
-          border: 3px solid #5B5947;
-          width: 50%;
-          height: 30px;
-          margin-right: 10px;
-          margin-top: 10px;
-          font-size: 12px;
+          right: 15px;
+          top: 12px;
         }
+        &:hover{
+          cursor: pointer;
+          transform: scale(1.05);
+        }
+        &:active{
+          cursor: pointer;
+          transform: scale(.93);
+        }
+        svg{
+          width: 30px;
+          @media only screen and (max-width:580px){
+            width: 22px;
+          }
+        }
+      }
     }
     .sortingWrapper{
       position: relative;
@@ -194,6 +231,10 @@
             border-radius: 50%;
             background: #F3AD26;
             transition: all .2s;
+            @media only screen and (max-width: 560px){
+              width: 18px;
+              height: 18px;
+            }
             &:active{
               cursor: pointer;
               transform: scale(.95);
